@@ -7,7 +7,8 @@
 	(BDB:DBC-PUT): accept :OVERWRITE-DUP
 	* modules/berkeley-db/configure.in:
 	check for the new field names in DB_TXN_ACTIVE
-	* modules/berkeley-db/dbi.lisp (db-txn-active):
+	* modules/berkeley-db/dbi.lisp (db-txn-active): rename fields:
+	`xid' to `gid' and `xa_status' to `status'
 	use :DB-GID-SIZE instead of :DB-XIDDATASIZE
 
 2010-05-18  Sam Steingold  <sds@gnu.org>
